# quantum-index

./: .dockerignore  .env.example  .env.template  .gitignore  .windsurfrules  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  ETHICAL_GUIDELINES.md  LICENSE  LICENSE.md  Makefile  Miniconda3-latest-MacOS-arm64.sh  README.md  SECURITY.md  build_config.yaml  conda_init.sh  conda_init_simple.sh  deepnote_init.ipynb  docker-compose.yml  environment.yml  metal_requirements.md  pyproject.toml  quantize.py  quantum_rag.py  quantum_search.py  quantum_terminal.py  requirements-base.txt  requirements.txt  run_tui.sh  sdlc_workflow.gguf  sdlc_workflow.py  updated_architecture.mmd
.deepnote/: config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  metal_check.yml  pixee.yml  release.yml  test.yml
docs/: index.md
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
m3_ide/: Shaders.metal  __init__.py  api_server.py  metal_utils.py  test_metal.py
m3_ide/api/: cortex_client.py  jan_client.py
m3_ide/core/: config.py  m3_optimizer.py
m3_ide/models/: nemotron.py
m3_ide/quantum/: advanced_operations.py  state_manager.py
m3_ide/terminal/: ipython_integration.py  keybindings.py  terminal_app.py
m3_ide/warp_integration/: quantum_hooks.py  quantum_state.py  warp_commands.py
qterm/: Cargo.toml  Cargo.toml.bak  Package.resolved  Package.swift  README.md  build.rs  docker-compose.yml
qterm/Config/: api.swift
qterm/Plugins/MetalCompiler/: plugin.swift
qterm/Sources/: QTermView.swift  QTerminal.swift  main.swift
qterm/Sources/Benchmarks/: QTermBenchmark.swift
qterm/Sources/QTermCore/: DeepSeekClient.swift  JANClient.swift  MetalCompute.swift  QArchitect.swift  QBuildConfig.swift  QConfigProcessor.swift  QContainerConfig.swift  QContainerMemory.swift  QContainerTypes.swift  QDeviceManager.swift  QGitWorkflow.swift  QInterface.swift  QInterfaceTypes.swift  QKnowledgeBase.swift  QModelSelector.swift  QMultiModalEngine.swift  QNLPBridge.swift  QNeuralCompute.swift  QParallelProcessor.swift  QParallelProcessorV2.swift  QReasoningSession.swift  QRubyNLP.swift  QRubyOrchestrator.swift  QRubyProcessor.swift  QRubyPrompt.swift  QSyntaxProcessor.swift  QTermCommand.swift  QTypes.swift  QWorkflowProcessor.swift  QWriterPalette.swift  QWriterTypes.swift  QortexRAG.swift  QuantumError.swift  QuantumStateManager.swift  QuantumVector.swift  Shaders.metal
qterm/Sources/QTermCore/QSyntax/: README.md
qterm/Sources/QTermCore/Resources/: Shaders.metal
qterm/Sources/Resources/: Shaders.metal
qterm/Sources/qterm/: main.swift
qterm/Tests/QTermTests/: Q0rtexDeepSeekTests.swift  QSyntaxProcessorTests.swift  QTermTests.swift  QWorkflowProcessorTests.swift
qterm/src/: app.rs  binary_state.rs  bridge.rs  command_processor.rs  config.rs  emotions.rs  error.rs  event_bus.rs  events.rs  handlers.rs  init.rs  integration.rs  lib.rs  living_state.rs  main.rs  metrics.rs  monitor.rs  openrouter.rs  optimizations.rs  orchestrator.rs  quantum_bridge.rs  quantum_renderer.rs  render.rs  shell.rs  state_bridge.rs  sync.rs  terminal_input.rs  transitions.rs  visualization.rs
qterm/src/ui/: achievements.rs  animations.rs  avatar.rs  effects.rs  mod.rs  particles.rs  terminal_state.rs
scripts/: qlaunch.py
scripts/qflow/: README.md  qcheck.py  qclean.py  qnap.py  requirements.txt
services/cortex/: Dockerfile  README.md  app.py  cortex_server.py  environment.yml  metal_accelerator.py  pipeline_orchestrator.py  process_analyzer.py  process_web.py  quantum_llm_pipeline.py  quantum_orchestrator.py  quantum_rag.py  quantum_scaffold.py  quantum_system.py  quantum_tui.py  requirements-metal.txt  requirements.txt  resource_manager.py  server.py
services/cortex/QuantumTUI-Swift/: Package.resolved  Package.swift
services/cortex/config/: nexus_config.yaml
services/cortex/memory/: unified_memory.py
services/cortex/optimizers/: m3_optimizer.py
services/cortex/tests/: test_integration.py
services/cortex/ui/: quantum_tui.py  test_tui.py
services/docling/: Dockerfile  docling_server.py
services/jan/: environment.yml  jan_server.py  requirements.txt
services/q0rtex/: Dockerfile
services/q0rtex/config/: config.yml
src/core/: circuit.rs  gates.rs  mod.rs  quantum_state.rs
src/q0rtex-rs/: Cargo.toml
src/q0rtex-rs/src/: lib.rs
src/q0rtex/core/: __init__.py  launcher.py  warp_q0rtex_connector.py
src/q0rtex/metal/: accelerator.py
src/q0rtex/plugins/: ip_notice.py  quantum_rag_plugin.py  warp_completion.py
src/q0rtex/quantum/: meditation.py  state.py  terminal.py
src/q0rtex/tests/: conftest.py  test_core.py
src/quandex-rs/: Cargo.toml
venv311/: pyvenv.cfg
volumes/milvus/rdb_data/: IDENTITY  (+4 more)
(+18 files in other folders)
