[project]
name = "quantum-neural-engine"
version = "0.1.0"
description = "Quantum Neural Engine with Metal Acceleration"
requires-python = ">=3.13.1"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.dependencies]
python = "^3.13.1"
torch = "^2.1.0"
transformers = "^4.35.0"
accelerate = "^0.24.0"
sympy = "^1.12"
numpy = "^1.24.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

