[package]
name = "qterm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# OpenRouter integration
openrouter-client = "0.3"
async-openai = "0.16"
reqwest = { version = "0.11", features = ["json"] }

# RAGchain dependencies
ragchain = "0.7"
qdrant-client = "1.7"
rust-bert = "0.21"
tokenizers = "0.15"

# Embeddings and ML
rust-cuda = "0.4"
tch = { version = "0.14", features = ["cuda"] }

# Quantum & Metal integration
metal = "0.27"
q0rtex = { git = "https://github.com/quandex/q0rtex", branch = "main" }
quantum-core = { git = "https://github.com/quandex/quantum-core", branch = "main" }

# TUI and visualization
crossterm = "0.27"
tui = "0.19"

[build-dependencies]
cc = "1.0"
metal-shaders = "0.2"

[features]
default = ["metal-compute"]
metal-compute = []
cuda = ["tch/cuda"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package]
name = "qterm"
version = "0.1.0"
edition = "2021"
authors = ["Quandex Team <team@quandex.io>"]
description = "Quantum terminal with GPU acceleration"
repository = "https://github.com/quandex/qterm"
license = "MIT OR Apache-2.0"

[features]
default = ["metal"]
metal = ["dep:metal"]
cuda = ["quandex/cuda"]
opencl = ["quandex/opencl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dependencies]
# Core dependencies
quandex = { version = "0.5", features = ["gpu"] }
q0rtex = { version = "0.3", features = ["metal"] }
metal = { version = "0.27.0", features = ["gpu-allocator"] }
core-foundation = "0.9.3"

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# GPU acceleration
half = { version = "2.3", features = ["num-traits"] }
num = { version = "0.4", features = ["rand"] }
rayon = "1.8"

# Quantum specific
ndarray = { version = "0.15", features = ["serde"] }
quantum-algebra = "0.9"
num-complex = "0.4"

